# cherry_icing_server

./: :w  Cargo.toml  README.md  cherry_icing.drawio
migrations/2023-04-10-033119_init/: up.sql
migrations/2023-04-10-063141_create_table_sesion/: up.sql
migrations/2023-04-10-063236_create_table_role/: up.sql
migrations/2023-04-10-063323_create_table_user_role/: up.sql
migrations/2023-04-10-063354_create_table_catalog/: down.sql  up.sql
migrations/2023-04-10-063415_create_table_action/: down.sql  up.sql
migrations/2023-04-10-063449_create_table_role_action_catalog/: down.sql  up.sql
src/: main.rs  schema.rs
src/actors/: mod.rs  user_actor.rs
src/connection_pool/: mod.rs  mysql_pool.rs
src/handlers/: mod.rs
src/models/: mod.rs  user_models.rs
src/routes/: mod.rs  router.rs  user_routes.rs
