[package]
name = "cherry_icing_server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Jesus Alejos https://github.com/jes-ale"]
[dependencies]
axum = "0.6.18" 
axum-macros =  "0.3.7" 
bb8 = "0.8"
diesel = "2.1.0" 
diesel-async = { version = "0.3.1", features = ["postgres",'bb8'] }
diesel_migrations = { version = " 2.1.0", features = ['postgres'] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version="1.3.1", features = ['v4','serde'] }
# DEPENDENCIES SPECIFIC TO AUTH
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"

